# shinycast

./: .gitignore  Cargo.toml  LICENSE-Apache  LICENSE-MIT  readme.md
app/: Cargo.toml
app/src/: main.rs
model/: Cargo.toml
model/src/: lib.rs
worker/: Cargo.toml
worker/src/: lib.rs
