[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "shinycast"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "3"
async-graphql-axum = "3"
axum = "0.5.1"
hyper = "0.14"
model = {path = "../model"}
sled = {version = "0.34.7", features = ["compression"]}
tokio = {version = "1.8", features = ["macros", "rt-multi-thread"]}
tower-http = {version = "0.2.1", features = ["cors"]}
worker = {path = "../worker"}

chrono = "0.4.19"
eyre = "0.6"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1"

youtube_dl = {version = "0.7"}
