[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "model"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = {version = "3", features = ["chrono-duration", "url"]}
chrono = "0.4.19"
clokwerk = {git = "https://github.com/alyti/clokwerk", branch = "serde"}
futures = "0.3.0"
lazy_static = "1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1"
slab = "0.4.2"
sled = "0.34.7"
thiserror = "1"
url = {version = "2.2.1"}
worker = {path = "../worker"}
